--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "songlib-backend",
-  "version": "1.0.5",
   "description": "the back end for songlib",
-  "main": "index.js",
+  "author": "Dev Siro",
+  "version": "1.0.5",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node index.js"
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "build": "tsc"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
@@ -17,6 +19,15 @@
     "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
     "swagger-ui-express": "^4.6.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^24.3.0",
+    "@types/swagger-ui-express": "^4.1.8",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": "22.x"
