--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "build": "tsc"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc",
+    "vercel-build": "npm run build"
   },
   "keywords": [],
   "license": "ISC",
