--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "express": "^4.17.1",
     "mongoose": "^7.1.0",
     "nanoid": "^4.0.2",
-    "nodemon": "^2.0.22",
-    "swagger-ui-express": "^4.6.2"
+    "nodemon": "^2.0.22"
   }
 }
