--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "songlib-backend",
-  "description": "the back end for songlib",
+  "description": "the back end for the songlib app",
   "author": "Dev Siro",
   "version": "1.0.5",
   "main": "dist/index.js",
